[gd_scene load_steps=3 format=3 uid="uid://cbhl3vg4rafl2"]

[ext_resource type="Script" path="res://Objects/Scripts/level_up_controller.gd" id="1_higd3"]
[ext_resource type="PackedScene" uid="uid://0vplimxr7v7e" path="res://Objects/Scenes/mission_select_card.tscn" id="2_hrf2w"]

[node name="level_up_menu" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)
script = ExtResource("1_higd3")
packedVContainer = ExtResource("2_hrf2w")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(576, 324)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 252.0
offset_right = 900.0
offset_bottom = 648.0
pivot_offset = Vector2(324, 324)
alignment = 1

[node name="VContainer" parent="MainContainer" instance_placeholder="res://Objects/Scenes/mission_select_card.tscn"]
layout_mode = 2

[node name="VContainer2" parent="MainContainer" instance_placeholder="res://Objects/Scenes/mission_select_card.tscn"]
layout_mode = 2

[node name="VContainer3" parent="MainContainer" instance_placeholder="res://Objects/Scenes/mission_select_card.tscn"]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
